@@ -1,3 +1,11 @@
+2015-04-15  Marek Polacek  <polacek@redhat.com>
+
+	* constexpr.c (use_new_call): Remove #define.
+	(lookup_parameter_binding): Remove function.
+	(cxx_bind_parameters_in_call): Remove unused code.
+	(cxx_eval_call_expression): Likewise.
+	(cxx_eval_constant_expression): Likewise.
+
 2015-04-14  Mikhail Maltsev  <maltsevm@gmail.com>
 
 	* tree.c (replace_placeholders_t): Remove unused type.
